# foundry

./: .gitignore  Cargo.toml  Justfile  README.md
component/: .gitignore  Cargo.toml  Justfile
component/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: lib.rs
wit/: world.wit
